--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#F60B0B</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+
+    <color name="theme">#F60B0B</color>
+    <color name="normal_color">#bfbfbf</color>
+    <color name="white">#FFFFFF</color>
+
+    <!--    一级标题颜色-->
+    <color name="text_1">#333333</color>
+    <!--    二级标题颜色-->
+    <color name="text_2">#999999</color>
+    <!--    三级标题颜色-->
+    <color name="text_3">#bbbbbb</color>
 </resources>
