--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,15 +77,25 @@
                     android:layout_height="16dp"
                     android:background="@drawable/home_top_bg" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
-                    android:layout_marginLeft="@dimen/padding_left"
-                    android:gravity="center_vertical"
-                    android:text="文章列表"
-                    android:textColor="@color/text_1"
-                    android:textSize="17dp" />
-
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="42dp"
+                        android:layout_height="42dp"
+                        android:src="@mipmap/article_logo"
+                        android:layout_marginLeft="6dp"
+                        android:padding="8dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="42dp"
+                        android:textSize="19dp"
+                        android:textColor="@color/text_1"
+                        android:text="文章列表"
+                        android:gravity="center_vertical"
+                        android:textStyle="bold"/>
+                </LinearLayout>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvHomeList"
                     android:layout_width="match_parent"
