--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,15 +125,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/ripple_bg"
-                    android:gravity="center"
+                    android:gravity="center_vertical"
                     android:paddingLeft="30dp"
                     android:text="请输入关键字进行搜索"
                     android:textColor="@color/text_2"
                     android:textSize="@dimen/text_1" />
 
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="30dp"
