增加开平页

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,23 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     tools:context=".main.login.LoginActivity">
 
+    <View
+        android:layout_width="50dp"
+        android:layout_height="8dp"
+        android:layout_marginTop="128dp"
+        android:background="@color/theme"
+        app:layout_constraintLeft_toLeftOf="@+id/tvLogin"
+        app:layout_constraintRight_toRightOf="@+id/tvLogin"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tvLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/padding"
+        android:layout_marginTop="100dp"
+        android:text="登录"
+        android:textColor="@color/black"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
     <EditText
+        android:id="@+id/etUsername"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/etUsername"/>
+        android:layout_marginLeft="@dimen/padding"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvLogin"
+        android:layout_marginTop="100dp"
+        android:background="@null"
+        android:textColor="@color/text_1"
+        android:textSize="@dimen/text_1"
+        android:textColorHint="@color/division_line"
+        android:hint="请输入账号"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="@dimen/padding"
+        android:layout_marginRight="@dimen/padding"
+        app:layout_constraintTop_toBottomOf="@+id/etUsername"
+        android:background="@color/division_line"/>
+
     <EditText
+        android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/etPassword"/>
+        android:layout_marginLeft="@dimen/padding"
+        android:layout_marginRight="@dimen/padding"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etUsername"
+        android:layout_marginTop="30dp"
+        android:background="@null"
+        android:textColor="@color/text_1"
+        android:textSize="@dimen/text_1"
+        android:textColorHint="@color/division_line"
+        android:hint="请输入密码"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="@dimen/padding"
+        android:layout_marginRight="@dimen/padding"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        android:background="@color/division_line"/>
     <Button
+        android:id="@+id/btLogin"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/btLogin"/>
-</LinearLayout>
+        android:layout_height="40dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:background="@color/theme"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_1"
+        android:text="登录"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPassword"
+        android:layout_marginTop="50dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
