--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="theme">#F60B0B</color>
     <color name="normal_color">#bfbfbf</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#111111</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="division_line">#EDEDED</color>
 
