--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.Design.NoActionBar">
+        <item name="android:windowDisablePreview">true</item>
+<!--        <item name="android:windowBackground">@color/transparent</item>-->
+    </style>
+
 
     <style name="text_1">
         <item name="android:textColor">@color/text_1</item>
