新建设置界面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
 
     <color name="theme">#F60B0B</color>
+    <color name="theme_2">#009688</color>
     <color name="normal_color">#bfbfbf</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#111111</color>
