--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     android:id="@+id/smartRefresh"
     app:srlEnableLoadMore="true"
     app:srlEnableRefresh="true"
-    tools:context=".main.home.HomeFragment">
+    tools:context="com.zs.wanandroid.main.home.HomeFragment">
 <!--    app:srlEnableAutoLoadMore="false"-->
 <!--    app:srlEnableOverScrollBounce="false"-->
     <com.scwang.smartrefresh.layout.header.ClassicsHeader
@@ -119,64 +119,26 @@
                 android:layout_marginTop="52dp"
                 android:background="@drawable/search_bg"
                 android:layout_marginRight="20dp">
-                <LinearLayout
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_toLeftOf="@+id/ivSearch">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:gravity="center"
-                        android:text="  收藏  "
-                        android:textColor="@color/theme"
-                        android:textSize="@dimen/text_1"
-                        android:id="@+id/tvCollect"
-                        android:textStyle="bold"
-                        android:background="@drawable/ripple_bg"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="30dp"
-                        android:background="@color/division_line"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:gravity="center"
-                        android:text="历史记录"
-                        android:textColor="@color/theme"
-                        android:textSize="@dimen/text_1"
-                        android:id="@+id/tvHistory"
-                        android:textStyle="bold"
-                        android:background="@drawable/ripple_bg"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="30dp"
-                        android:background="@color/division_line"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="分享"
-                        android:textColor="@color/text_2"
-                        android:textSize="@dimen/text_1"
-                        android:id="@+id/tvShare"
-                        android:textStyle="bold"
-                        android:background="@drawable/ripple_bg"/>
-                </LinearLayout>
+                    android:text="请输入关键字进行搜索"
+                    android:paddingLeft="30dp"
+                    android:textColor="@color/text_2"
+                    android:textSize="@dimen/text_1"
+                    android:gravity="center_vertical"
+                    android:id="@+id/tvSearch"
+                    android:textStyle="bold"
+                    android:background="@drawable/ripple_bg"/>
 
                 <ImageView
                     android:layout_width="46dp"
                     android:layout_height="46dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:src="@mipmap/search"
-                    android:id="@+id/ivSearch"
-                    android:padding="13dp"
-                    android:background="@drawable/ripple_bg"/>
+                    android:src="@mipmap/search_theme2"
+                    android:layout_marginRight="15dp"
+                    android:padding="10dp" />
             </RelativeLayout>
         </RelativeLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
