--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.mine.MineFragment">
+    tools:context="com.zs.wanandroid.main.mine.MineFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
