--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="text_2">13dp</dimen>
     <dimen name="text_3">11dp</dimen>
     <dimen name="padding">20dp</dimen>
+    <dimen name="set_padding">26dp</dimen>
     <dimen name="padding_left">20dp</dimen>
     <dimen name="padding_right">20dp</dimen>
 </resources>
