--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="SplashTheme" parent="Theme.Design.NoActionBar">
-        <item name="android:windowDisablePreview">true</item>
+        <item name="android:windowBackground">@color/white</item>
 <!--        <item name="android:windowBackground">@color/transparent</item>-->
     </style>
 
