自定义loadingTip 完成首页分页

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:gravity="center_horizontal"
-    tools:context="com.zs.wanandroid.SplashActivity">
+    tools:context="com.zs.wanandroid.ui.SplashActivity">
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
