--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.zs.wanandroid.main.set.SetActivity">
+    tools:context="com.zs.wanandroid.ui.set.SetActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -46,7 +46,7 @@
             android:textSize="13dp"
             app:layout_constraintLeft_toRightOf="@+id/ivHead"
             app:layout_constraintTop_toBottomOf="@+id/tvUserName"
-            android:text="id:111111" />
+            android:text="id:---" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,7 +71,7 @@
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_1"
-                    android:text="66"/>
+                    android:text="0"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_1"
-                    android:text="1100"/>
+                    android:text="0"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -151,7 +151,7 @@
                     android:textColor="@color/orange"
                     android:textSize="@dimen/text_2"
                     android:textStyle="bold"
-                    android:text="111" />
+                    android:text="0" />
 
                 <TextView
                     android:layout_width="wrap_content"
