--- a/app/src/main/res/menu/main_bottom_navigation.xml
+++ b/app/src/main/res/menu/main_bottom_navigation.xml
@@ -1,34 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_home"
-        android:enabled="true"
+        android:checked="true"
         android:icon="@mipmap/home"
-        app:showAsAction="ifRoom"
         android:title="@string/tab_1" />
     <item
         android:id="@+id/menu_project"
-        android:enabled="true"
         android:icon="@mipmap/project"
-        app:showAsAction="ifRoom"
         android:title="@string/tab_2" />
     <item
         android:id="@+id/menu_square"
-        android:enabled="true"
         android:icon="@mipmap/square"
-        app:showAsAction="ifRoom"
         android:title="@string/tab_3" />
     <item
         android:id="@+id/menu_official_account"
-        android:enabled="true"
         android:icon="@mipmap/official_account"
-        app:showAsAction="ifRoom"
         android:title="@string/tab_4" />
     <item
         android:id="@+id/menu_mine"
-        android:enabled="true"
-        app:showAsAction="ifRoom"
         android:icon="@mipmap/mine"
         android:title="@string/tab_5" />
 </menu>
