--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fitsSystemWindows="true"
-    tools:context="com.zs.wanandroid.main.login.LoginActivity">
+    tools:context="com.zs.wanandroid.ui.login.LoginActivity">
 
     <View
         android:layout_width="50dp"
