--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,146 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:id="@+id/smartRefresh"
-    app:srlEnableLoadMore="true"
-    app:srlEnableRefresh="true"
-    tools:context="com.zs.wanandroid.main.home.HomeFragment">
-<!--    app:srlEnableAutoLoadMore="false"-->
-<!--    app:srlEnableOverScrollBounce="false"-->
-    <com.scwang.smartrefresh.layout.header.ClassicsHeader
-        android:layout_width="match_parent"
-        android:layout_height="105dp"
-        app:srlAccentColor="@color/text_2"
-        app:srlPrimaryColor="@color/white" />
+    tools:context="com.zs.wanandroid.ui.main.home.HomeFragment">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/smartRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        app:srlEnableAutoLoadMore="false"
+        app:srlEnableLoadMore="true"
+        app:srlEnableOverScrollBounce="true"
+        app:srlEnableRefresh="true">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBar"
+        <!--        <com.scwang.smartrefresh.layout.header.ClassicsHeader-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="105dp"-->
+        <!--            app:srlAccentColor="@color/text_2"-->
+        <!--            app:srlPrimaryColor="@color/white" />-->
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="215dp"
-            android:background="@color/transparent">
+            android:layout_height="match_parent">
 
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/toolbar_layout"
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:contentScrim="@color/transparent"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                android:layout_height="215dp"
+                android:background="@color/transparent">
 
-                <ImageView
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/toolbar_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/transparent"
-                    app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.99999" />
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
+                    app:contentScrim="@color/transparent"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-        </com.google.android.material.appbar.AppBarLayout>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/transparent"
+                        app:layout_collapseMode="parallax"
+                        app:layout_collapseParallaxMultiplier="0.99999" />
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        <cn.bingoogolapple.bgabanner.BGABanner
-            android:id="@+id/banner"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            app:banner_pointAutoPlayAble="true"
-            app:banner_pageChangeDuration="1000"
-            app:banner_pointAutoPlayInterval="3000"
+            </com.google.android.material.appbar.AppBarLayout>
 
-            app:banner_indicatorGravity="left"
-            app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
-            app:banner_pointContainerBackground="@color/transparent"
-            app:banner_pointContainerLeftRightPadding="@dimen/padding_left"
-            app:banner_pointTopBottomMargin="40dp" />
+            <cn.bingoogolapple.bgabanner.BGABanner
+                android:id="@+id/banner"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                app:banner_indicatorGravity="left"
+                app:banner_pageChangeDuration="1000"
+                app:banner_pointAutoPlayAble="true"
+                app:banner_pointAutoPlayInterval="3000"
+                app:banner_pointContainerBackground="@color/transparent"
+                app:banner_pointContainerLeftRightPadding="@dimen/padding_left"
+                app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
+                app:banner_pointTopBottomMargin="40dp" />
 
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/nestedView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <LinearLayout
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/nestedView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/home_top_bg"
-                android:orientation="vertical">
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="16dp"
-                    android:background="@drawable/home_top_bg" />
+                android:overScrollMode="never"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="42dp"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="42dp"
-                        android:layout_height="42dp"
-                        android:src="@mipmap/article_logo"
-                        android:layout_marginLeft="6dp"
-                        android:padding="8dp"/>
-                    <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/home_top_bg"
+                    android:orientation="vertical">
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="16dp"
+                        android:background="@drawable/home_top_bg" />
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="42dp"
-                        android:textSize="19dp"
-                        android:textColor="@color/text_1"
-                        android:text="文章列表"
-                        android:gravity="center_vertical"
-                        android:textStyle="bold"/>
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="42dp"
+                            android:layout_height="42dp"
+                            android:layout_marginLeft="10dp"
+                            android:padding="8dp"
+                            android:src="@mipmap/article_logo" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="42dp"
+                            android:gravity="center_vertical"
+                            android:text="文章列表"
+                            android:textColor="@color/text_1"
+                            android:textSize="19dp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvHomeList"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:nestedScrollingEnabled="false" />
                 </LinearLayout>
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvHomeList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:nestedScrollingEnabled="false"
-                    android:background="@color/white" />
-            </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
+            </androidx.core.widget.NestedScrollView>
+
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlSearch"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:alpha="0"
+        android:background="@color/white">
 
         <RelativeLayout
-            android:id="@+id/rlSearch"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:alpha="0"
-            android:background="@color/white">
+            android:layout_height="42dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="43dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/search_bg">
 
-            <RelativeLayout
+            <TextView
+                android:id="@+id/tvSearch"
                 android:layout_width="match_parent"
-                android:layout_height="42dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="43dp"
-                android:background="@drawable/search_bg"
-                android:layout_marginRight="20dp">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="请输入关键字进行搜索"
-                    android:paddingLeft="30dp"
-                    android:textColor="@color/text_2"
-                    android:textSize="@dimen/text_1"
-                    android:gravity="center_vertical"
-                    android:id="@+id/tvSearch"
-                    android:textStyle="bold"
-                    android:background="@drawable/ripple_bg"/>
+                android:layout_height="match_parent"
+                android:background="@drawable/ripple_bg"
+                android:gravity="center_vertical"
+                android:paddingLeft="30dp"
+                android:text="请输入关键字进行搜索"
+                android:textColor="@color/text_2"
+                android:textSize="@dimen/text_1"
+                android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@mipmap/search_theme2"
-                    android:layout_marginRight="15dp"
-                    android:padding="7dp" />
-            </RelativeLayout>
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:padding="7dp"
+                android:src="@mipmap/search_theme2" />
         </RelativeLayout>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </RelativeLayout>
 
-</com.scwang.smartrefresh.layout.SmartRefreshLayout>
+    <com.zs.wanandroid.weight.LoadingTip
+        android:id="@+id/loadingTip"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+</FrameLayout>
