--- a/app/src/main/res/layout/fragment_square.xml
+++ b/app/src/main/res/layout/fragment_square.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.zs.wanandroid.main.square.SquareFragment">
+    tools:context="com.zs.wanandroid.ui.main.square.SquareFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
