修改登录界面

--- a/app/src/main/res/layout/loading_tip.xml
+++ b/app/src/main/res/layout/loading_tip.xml
@@ -33,7 +33,7 @@
         android:layout_centerVertical="true"
         android:visibility="gone"
         app:indicatorColor="@color/theme"
-        app:indicatorName="BallPulseIndicator"
+        app:indicatorName="BallBeatIndicator"
         android:id="@+id/indicatorView"/>
 
     <LinearLayout
