--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="@dimen/padding"
+        android:layout_marginRight="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tvLogin"
         android:layout_marginTop="120dp"
@@ -64,6 +65,16 @@
         android:textSize="@dimen/text_1"
         android:textColorHint="@color/division_line"
         android:hint="请输入账号"/>
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="@+id/etUsername"
+        app:layout_constraintBottom_toBottomOf="@+id/etUsername"
+        app:layout_constraintRight_toRightOf="@+id/etUsername"
+        android:background="@drawable/ripple_circle_bg"
+        android:src="@mipmap/username_clear"
+        android:padding="10dp"
+        android:id="@+id/ivClear"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -85,7 +96,18 @@
         android:textColor="@color/text_1"
         android:textSize="@dimen/text_1"
         android:textColorHint="@color/division_line"
-        android:hint="请输入密码"/>
+        android:hint="请输入密码"
+        android:inputType="textPassword"/>
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="@+id/etPassword"
+        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
+        app:layout_constraintRight_toRightOf="@+id/etPassword"
+        android:background="@drawable/ripple_circle_bg"
+        android:id="@+id/ivPasswordVisibility"
+        android:src="@mipmap/password_show"
+        android:padding="7dp"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -93,33 +115,49 @@
         android:layout_marginRight="@dimen/padding"
         app:layout_constraintTop_toBottomOf="@+id/etPassword"
         android:background="@color/division_line"/>
-    <Button
-        android:id="@+id/btLogin"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:background="@color/theme"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_1"
-        android:text="登录"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword"
-        android:layout_marginTop="50dp"/>
-
+        android:layout_marginTop="50dp"
+        android:id="@+id/llLogin"
+        android:background="@drawable/login_bg">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvLoginTxt"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textSize="@dimen/text_1"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:text="登陆"/>
+        <com.wang.avi.AVLoadingIndicatorView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/indicatorView"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:visibility="gone"
+            app:indicatorColor="@color/white"
+            app:indicatorName="BallSpinFadeLoaderIndicator"/>
+    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btLogin"
-        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/llLogin"
+        android:layout_marginTop="20dp"
         android:textSize="@dimen/text_1"
         android:textColor="@color/theme"
         android:gravity="center"
-        android:text="跳过登陆"
+        android:text="暂不登陆"
         android:id="@+id/tvSkip"
         android:background="@drawable/ripple_bg"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
