--- a/app/src/main/res/layout/activity_girl.xml
+++ b/app/src/main/res/layout/activity_girl.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.zs.wanandroid.ui.girl.GirlActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/ivGirl"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
