--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -55,7 +55,7 @@
         app:layout_constraintRight_toRightOf="@+id/tvClear"
         android:gravity="center_vertical"
         android:layout_marginRight="50dp"
-        android:text="1.23M"
+        tools:text="1.23M"
         style="@style/text_2"/>
     <TextView
         android:layout_width="match_parent"
@@ -78,7 +78,7 @@
         app:layout_constraintRight_toRightOf="@+id/tvVersion"
         android:gravity="center_vertical"
         android:layout_marginRight="50dp"
-        android:text="0.0.1"
+        android:text="v 0.0.1"
         style="@style/text_2"/>
     <TextView
         android:layout_width="match_parent"
