--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -100,7 +100,8 @@
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@+id/tvClear"
             app:labelBackground="@drawable/tag_ripple_bg"
-            app:labelTextColor="#A0A0A0"
+            app:labelTextColor="@color/text_2"
+            app:labelTextSize="@dimen/text_2"
             app:labelTextPaddingBottom="3dp"
             app:labelTextPaddingLeft="10dp"
             app:labelTextPaddingRight="10dp"
