--- a/app/src/main/res/layout/fragment_article_list.xml
+++ b/app/src/main/res/layout/fragment_article_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.zs.wanandroid.ui.main.project.list.ProjectListFragment">
+    tools:context="com.zs.wanandroid.ui.main.tab.list.TabListFragment">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
