--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -123,7 +123,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:overScrollMode="never"
             android:id="@+id/rvSearch"/>
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
